--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,25 +7,23 @@
     tools:context=".Settings">
 
     <include
-        android:id="@+id/main_toolbar"
+        android:id = "@+id/main_toolbar"
         layout="@layout/main_toolbar"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        >
 
     </include>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ListView
+        android:id="@+id/settings_listview"
+        android:layout_width="395dp"
+        android:layout_height="659dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="setting"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+
 </android.support.constraint.ConstraintLayout>
