--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,11 +7,29 @@
     tools:context=".Settings">
 
     <include
-        android:id = "@+id/main_toolbar"
-        layout="@layout/main_toolbar"
-        >
+        android:id="@+id/main_toolbar"
+        layout="@layout/main_toolbar">
 
     </include>
+
+    <Button
+        android:id="@+id/button_notify"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="24dp"
+        android:background="#61568EA5"
+        android:text="Notification"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/settings_listview"
+        app:layout_constraintEnd_toStartOf="@+id/settings_listview"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toEndOf="@+id/settings_listview"
+        app:layout_constraintTop_toBottomOf="@+id/settings_listview"
+        app:layout_constraintVertical_bias="0.121" />
 
     <ListView
         android:id="@+id/settings_listview"
@@ -24,6 +42,8 @@
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
