--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,24 +20,20 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:background="#61568EA5"
         android:text="Notification"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/settings_listview"
-        app:layout_constraintEnd_toStartOf="@+id/settings_listview"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toEndOf="@+id/settings_listview"
-        app:layout_constraintTop_toBottomOf="@+id/settings_listview"
-        app:layout_constraintVertical_bias="0.121" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
         android:id="@+id/settings_listview"
-        android:layout_width="395dp"
-        android:layout_height="659dp"
+        android:layout_width="381dp"
+        android:layout_height="515dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
