--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,23 +15,24 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="370dp"
-        android:layout_height="40dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingLeft="4dp"
         android:text="Article Name"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
     <EditText
         android:id="@+id/search_name"
-        android:layout_width="370dp"
-        android:layout_height="50dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -39,45 +40,47 @@
         android:ems="10"
         android:hint="Aricle Name"
         android:inputType="textPersonName"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="370dp"
-        android:layout_height="40dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingLeft="4dp"
         android:text="Topic Name"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_name" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="370dp"
-        android:layout_height="40dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingLeft="4dp"
         android:text="Tag"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_topicname" />
 
     <RadioGroup
         android:id="@+id/search_topicname"
-        android:layout_width="370dp"
-        android:layout_height="50dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -90,25 +93,25 @@
 
         <RadioButton
             android:id="@+id/search_food"
-            android:layout_width="185dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Food"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
 
         <RadioButton
             android:id="@+id/search_tech"
-            android:layout_width="185dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Tech"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/search_tag"
-        android:layout_width="370dp"
-        android:layout_height="50dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -116,14 +119,14 @@
         android:ems="10"
         android:hint="Tag Name"
         android:inputType="textPersonName"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <GridView
         android:id="@+id/search_result"
-        android:layout_width="370dp"
+        android:layout_width="325dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -138,13 +141,14 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="370dp"
-        android:layout_height="40dp"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingLeft="4dp"
         android:text="Result"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
