--- a/app/src/main/res/layout/category_listview.xml
+++ b/app/src/main/res/layout/category_listview.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/category_listview_img"
-        android:layout_width="380dp"
-        android:layout_height="160dp"
+        android:layout_width="325dp"
+        android:layout_height="135dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -26,21 +26,23 @@
         android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category_listview_img"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/category_listview_topic"
-        android:layout_width="230dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         android:text="TextView"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/category_listview_set1"
         app:layout_constraintStart_toEndOf="@+id/category_listview_paw"
         app:layout_constraintTop_toBottomOf="@+id/category_listview_img" />
 
@@ -48,7 +50,7 @@
         android:id="@+id/category_listview_set1"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toStartOf="@+id/category_listview_set2"
@@ -59,7 +61,7 @@
         android:id="@+id/category_listview_set2"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toStartOf="@+id/category_listview_set3"
@@ -70,7 +72,7 @@
         android:id="@+id/category_listview_set3"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
